--- a/src/tibs.stem.Web.Host/QuotationProductCategory.html
+++ b/src/tibs.stem.Web.Host/QuotationProductCategory.html
@@ -100,7 +100,7 @@
             </tr>
             <tr style="page-break-inside:avoid;page-break-after:auto;background: rgb(166, 166, 166);color: #fff;">
                 <td colspan="1" style="text-align:right;border: 2px solid #000;width: 20%;">Amount in Words</td>
-                <td colspan="2" style="text-align:left;border: 2px solid #000;">(Dirhams {Amount_Words} and Fils 0/100 only)</td>
+                <td colspan="2" style="text-align:left;border: 2px solid #000;">(Dirhams {Amount_Words} and Fils {fill}/100 only)</td>
             </tr>
         </table>
     </div>
