--- a/src/tibs.stem.Web.Host/StdQuotation.html
+++ b/src/tibs.stem.Web.Host/StdQuotation.html
@@ -57,7 +57,7 @@
 </head>
 <body style="font-family:Calibri">
 
-    <div style="color:#fff;">
+    <div style="color:#f2f2f2;">
         {header_Content}
     </div>
 
