--- a/src/tibs.stem.Web.Host/Stdfooter.html
+++ b/src/tibs.stem.Web.Host/Stdfooter.html
@@ -2,8 +2,8 @@
     <div style="text-align:right;">
         <img style="max-height:80px;max-width:360px;margin-right: -15px;" src="{footer_url}" alt="footerImage" />
     </div>
-    <div style="text-align:center;margin-top:-35px;"> <span style="color:#808080;font-size:24px;font-family:Calibri;">800BAFCO</span></div>
-    <div style="text-align:left;font-family:Calibri;">
+    <div style="text-align:center;margin-top:-40px;"> <span style="color:#808080;font-size:24px;font-family:Calibri;">800BAFCO</span></div>
+    <div style="text-align:left;font-family:Calibri;margin-top:-25px;">
         Page &nbsp; <span class="page"></span> of <span class="topage"></span>
     </div>
 </div>
