--- a/src/tibs.stem.Web.Host/PhotoEmphasis.html
+++ b/src/tibs.stem.Web.Host/PhotoEmphasis.html
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body style="font-family:Calibri">
-    <div style="color:#fff;">
+    <div style="color:#f2f2f2;">
         {header_Content}
     </div>
     <table id="t01" style="page-break-inside:avoid;page-break-after:auto;margin-top:-23px;" class="vendorprint">
